third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/max_encoded_len_ui/not_encode.rs
use parity_scale_codec::{MaxEncodedLen};

#[derive(MaxEncodedLen)]
struct NotEncode;

fn main() {}
